[gd_scene load_steps=9 format=2]

[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://art/MainMenu.png" type="Texture" id=2]
[ext_resource path="res://Scenes/MainMenu/VBoxContainer.gd" type="Script" id=3]
[ext_resource path="res://Scenes/MainMenu/ControlMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/MainMenu/CreditsMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/IntroCutScene/IntroCutScene.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer2" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.5
margin_top = -320.0
margin_right = 300.5
margin_bottom = 320.0
custom_constants/margin_bottom = 100

[node name="GameTitle" type="Label" parent="MarginContainer2"]
margin_top = 150.0
margin_right = 601.0
margin_bottom = 390.0
custom_colors/font_color = Color( 0.203922, 0.0666667, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Oz - Dark Illusion

A tale of madness"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -66.0
margin_top = -295.0
margin_right = 66.0
custom_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 132.0
margin_bottom = 195.0
custom_constants/separation = 30
script = ExtResource( 3 )
controlMenu = ExtResource( 5 )
creditsMenu = ExtResource( 6 )
level1 = ExtResource( 7 )

[node name="StartButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_right = 132.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 2 )
text = "Start"

[node name="CreditsButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 75.0
margin_right = 132.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 2 )
text = "Credits"

[node name="ControlButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 150.0
margin_right = 132.0
margin_bottom = 195.0
custom_fonts/font = SubResource( 2 )
text = "Control"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )

[connection signal="pressed" from="MarginContainer/VBoxContainer/StartButton" to="MarginContainer/VBoxContainer" method="_on_StartButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CreditsButton" to="MarginContainer/VBoxContainer" method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ControlButton" to="MarginContainer/VBoxContainer" method="_on_ControlButton_pressed"]
